[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/Characters/ExplosiveEnemyDeath.gd" type="Script" id=1]
[ext_resource path="res://scenes/Util/RandomAudioStreamPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sounds/impactMining_003.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/impactMining_001.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/enemy/bomb_death.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/impactMetal_heavy_002.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/impactMetal_heavy_004.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/impactMining_002.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/impactMetal_heavy_001.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/impactMining_000.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/impactMining_004.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/impactMetal_heavy_003.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/effects/particles.png" type="Texture" id=13]
[ext_resource path="res://assets/sounds/impactMetal_heavy_000.ogg" type="AudioStream" id=14]

[sub_resource type="Animation" id=15]
resource_name = "death"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D_Explosion:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.835294, 0.172549, 0.172549, 1 ), Color( 1, 1, 1, 1 ), Color( 0.835294, 0.172549, 0.172549, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Sprite")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "drop_bomb"
} ]
}

[sub_resource type="CanvasItemMaterial" id=12]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=13]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.698864 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=9]
max_value = 2.0
bake_resolution = 180
_data = [ Vector2( 0, 0.00568175 ), 0.0, 0.0, 0, 0, Vector2( 0.180905, 2 ), -0.219355, 0.0, 0, 0, Vector2( 1, 0.00696468 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 2, 0 )
initial_velocity = 200.0
angular_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 14 )
anim_speed = 0.2

[node name="ExplosiveEnemyDeath" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "death"
anims/death = SubResource( 15 )

[node name="DeathSoundPlayer1" parent="." instance=ExtResource( 2 )]
numberToPlay = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DeathSoundPlayer1"]
stream = ExtResource( 14 )
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="DeathSoundPlayer1"]
stream = ExtResource( 9 )
bus = "SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="DeathSoundPlayer1"]
stream = ExtResource( 6 )
bus = "SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="DeathSoundPlayer1"]
stream = ExtResource( 12 )
bus = "SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="DeathSoundPlayer1"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="DeathSoundPlayer2" parent="." instance=ExtResource( 2 )]
numberToPlay = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DeathSoundPlayer2"]
stream = ExtResource( 10 )
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="DeathSoundPlayer2"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="DeathSoundPlayer2"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="DeathSoundPlayer2"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="DeathSoundPlayer2"]
stream = ExtResource( 11 )
bus = "SFX"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, -12 )

[node name="Particles2D_Explosion" type="Particles2D" parent="."]
material = SubResource( 12 )
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
speed_scale = 0.6
explosiveness = 1.0
randomness = 1.0
visibility_rect = Rect2( 0, 0, 0, 49.8036 )
draw_order = 1
process_material = SubResource( 11 )
texture = ExtResource( 13 )
